added Domain and Data layer, added DB Context.

--- a/CleanArch.Mvc/appsettings.json
+++ b/CleanArch.Mvc/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "VarsityIdentityDBConnStr": "Server=SHOUROV_SAHA;Database=VarsityIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "VarsityIdentityDBConnStr": "Server=SHOUROV_SAHA;Database=VarsityIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "VarsityDBConnStr": "Server=SHOUROV_SAHA;Database=VarsityDB;Trusted_Connection=True;MultipleActiveResultSets=true; TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
