added dependancy injection with a presentation layer codes

--- a/CleanArch.Mvc/CleanArch.Mvc.csproj
+++ b/CleanArch.Mvc/CleanArch.Mvc.csproj
@@ -20,6 +20,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CleanArch.Data\CleanArch.Data.csproj" />
+    <ProjectReference Include="..\CleanArch.Infra.IoC\CleanArch.Infra.IoC.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
